--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       "
     >
     <div class="header">
-        <img src="AnkaraMedipolÜniversitesiMaviLogo_48x48.webp" alt="" width="40px" />
+        <img src="All logos and images/AnkaraMedipolÜniversitesiMaviLogo_48x48.webp" alt="" width="40px" />
        Ankara Medipol University - MEBIS
       </h1>
 
@@ -59,14 +59,14 @@
           <br />
           <a href="">
             <img
-              src="png-transparent-logo-computer-icons-instagram-logo-instagram-logo-miscellaneous-text-trademark.png"
+                 src="All logos and images/png-transparent-logo-computer-icons-instagram-logo-instagram-logo-miscellaneous-text-trademark.png"
               width="20px"
               style="margin-bottom: 10px; margin-left: 180px;"
             />
           </a>
           <a href="">
             <img
-              src="Youtube_logo.png"
+                 src="/All logos and images/Youtube_logo.png"
               width="25px"
               style="margin-bottom: 10px"
             />
